--- a/web/tsconfig.node.json
+++ b/web/tsconfig.node.json
@@ -5,6 +5,7 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "allowJs": true,
     "target": "ESNext",
     "resolveJsonModule": true,
     "skipLibCheck": true
